# felps

./: .gitignore  readme.md
firmware/: felps.ino
firmware/src/board/: board.h  init.h  pins.h
firmware/src/bq25672/: bq25672.hpp
firmware/src/events/: event.hpp  event_table.hpp
firmware/src/os/: disp.cpp  disp.h  err.h  exp.cpp  exp.h  pwr.cpp  pwr.h  serial_handler.hpp  sys.cpp  sys.h
tests/: CMakeLists.txt  CMakePresets.json  main.cpp  mock_serial_handler.hpp  test_events.cpp  test_serial_handler.cpp  tests.h
tools/: Dockerfile  arduino-cli.yaml  build-docker.sh  cmd.sh  run-docker
